Added configuration to server.

--- a/TCPChat/nbproject/project.properties
+++ b/TCPChat/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.6.jar=..\\ThirdParty\\commons-lib\\commons-codec-1.6.jar
+file.reference.commons-collections-3.2.1.jar=..\\ThirdParty\\commons-lib\\commons-collections-3.2.1.jar
 file.reference.commons-configuration-1.8.jar=..\\ThirdParty\\commons-lib\\commons-configuration-1.8.jar
 file.reference.commons-lang-2.6.jar=..\\ThirdParty\\commons-lib\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=..\\ThirdParty\\commons-lib\\commons-logging-1.1.1.jar
@@ -39,9 +40,10 @@ javac.classpath=\
     ${file.reference.VolcanServer.jar-1}:\
     ${file.reference.MVCLibrary.jar-1}:\
     ${file.reference.commons-configuration-1.8.jar}:\
-    ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.commons-codec-1.6.jar}
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-lang-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
