--- a/EchoServer/nbproject/project.properties
+++ b/EchoServer/nbproject/project.properties
@@ -27,11 +27,21 @@ dist.jar=${dist.dir}/EchoServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.6.jar=..\\ThirdParty\\commons-codec-1.6\\commons-codec-1.6.jar
+file.reference.commons-collections-3.2.1.jar=..\\ThirdParty\\commons-lib\\commons-collections-3.2.1.jar
+file.reference.commons-configuration-1.8.jar=..\\ThirdParty\\commons-lib\\commons-configuration-1.8.jar
+file.reference.commons-lang-2.6.jar=..\\ThirdParty\\commons-lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=..\\ThirdParty\\commons-lib\\commons-logging-1.1.1.jar
 file.reference.VolcanServer.jar-1=..\\VolcanServerLib\\dist\\VolcanServer.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.VolcanServer.jar-1}
+    ${file.reference.VolcanServer.jar-1}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-configuration-1.8.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-lang-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
