Added configuration to jSocks server.

--- a/jSocks/nbproject/project.properties
+++ b/jSocks/nbproject/project.properties
@@ -25,11 +25,21 @@ dist.dir=dist
 dist.jar=${dist.dir}/jSocks.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-codec-1.6.jar=..\\ThirdParty\\commons-lib\\commons-codec-1.6.jar
+file.reference.commons-collections-3.2.1.jar=..\\ThirdParty\\commons-lib\\commons-collections-3.2.1.jar
+file.reference.commons-configuration-1.8.jar=..\\ThirdParty\\commons-lib\\commons-configuration-1.8.jar
+file.reference.commons-lang-2.6.jar=..\\ThirdParty\\commons-lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=..\\ThirdParty\\commons-lib\\commons-logging-1.1.1.jar
 file.reference.VolcanServer.jar=C:\\Users\\MonkeyBreath\\Volcan-Server\\VolcanServerLib\\dist\\VolcanServer.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.VolcanServer.jar}
+    ${file.reference.VolcanServer.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-configuration-1.8.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
